--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -96,12 +96,12 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
 |                      |                          | shots_per_randomization |                                                                                           | 'auto'                    |
 |                      | zne_mitigation           |                         | `True`/`False`                                                                                | `False`                     |
 |                      | zne                      | noise_factors           |                                                                                           | `(1, 3, 5)`                 |
-|                      |                          | extrapolator            | `'exponential'`/<br>`'linear'`/<br>`'double_exponential'`/<br>`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
+|                      |                          | extrapolator            | `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
 | twirling             | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
 |                      | num_randomizations       |                         |                                                                                           | `'auto'`                    |
 |                      | shots_per_randomization  |                         |                                                                                           | `'auto'`                    |
-|                      | strategy                 |                         | `'active'`/<br>`'active-circuit'`/<br>`'active-accum'`/<br>`'all'`                                | `'active-accum'`            |
+|                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |
   </TabItem>
 
   <TabItem value="SamplerV2" label="Sampler V2">
@@ -117,7 +117,7 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
 |                      | num_randomizations       |                         |                                                                                           | `'auto'`                    |
 |                      | shots_per_randomization  |                         |                                                                                           | `'auto'`                    |
-|                      | strategy                 |                         | `'active'`/<br>`'active-circuit'`/<br>`'active-accum'`/<br>`'all'`                                | `'active-accum'`            |
+|                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |
 
   </TabItem>
 
@@ -136,12 +136,12 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
 |                      |                          | shots_per_randomization |                                                                                           | 'auto'                    |
 |                      | zne_mitigation           |                         | `True`/`False`                                                                                | `False`                     |
 |                      | zne                      | noise_factors           |                                                                                           | `(1, 3, 5)`                 |
-|                      |                          | extrapolator            | `'exponential'`/<br>`'linear'`/<br>`'double_exponential'`/<br>`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
+|                      |                          | extrapolator            | `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
 | twirling             | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
 |                      | num_randomizations       |                         |                                                                                           | `'auto'`                    |
 |                      | shots_per_randomization  |                         |                                                                                           | `'auto'`                    |
-|                      | strategy                 |                         | `'active'`/<br>`'active-circuit'`/<br>`'active-accum'`/<br>`'all'`                                | `'active-accum'`            |
+|                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |
 
   </TabItem>
 
@@ -158,7 +158,7 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
 |                      | num_randomizations       |                         |                                                                                           | `'auto'`                    |
 |                      | shots_per_randomization  |                         |                                                                                           | `'auto'`                    |
-|                      | strategy                 |                         | `'active'`/<br>`'active-circuit'`/<br>`'active-accum'`/<br>`'all'`                                | `'active-accum'`            |
+|                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |
 
   </TabItem>
 
