--- a/docs/run/runtime-options-overview 2.mdx
+++ b/docs/run/runtime-options-overview 2.mdx
@@ -91,7 +91,7 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
 |                          | shots_per_randomization |                                                                                           | 'auto'                    |
 | zne_mitigation           |                         | `True`/`False`                                                                                | `False`                     |
 | zne                      | noise_factors           |                                                                                           | `(1, 3, 5)`                 |
-|                          | extrapolator            | `'exponential'`/<br>`'linear'`/<br>`'double_exponential'`/<br>`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
+|                          | extrapolator            | `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
   </TabItem>
   <TabItem value="SamplerV2" label="Sampler V2">
 | Sub-options              | Sub-sub-options         | Choices                                                                                   | Default                   |
@@ -101,7 +101,7 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
 |                          | shots_per_randomization |                                                                                           | 'auto'                    |
 | zne_mitigation           |                         | `True`/`False`                                                                                | `False`                     |
 | zne                      | noise_factors           |                                                                                           | `(1, 3, 5)`                 |
-|                          | extrapolator            | `'exponential'`/<br>`'linear'`/<br>`'double_exponential'`/<br>`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
+|                          | extrapolator            | `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
   </TabItem>
     <TabItem value="EstimatorV1" label="Estimator (V1)">
 | Sub-options              | Sub-sub-options         | Choices                                                                                   | Default                   |
@@ -111,7 +111,7 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
 |                          | shots_per_randomization |                                                                                           | 'auto'                    |
 | zne_mitigation           |                         | `True`/`False`                                                                                | `False`                     |
 | zne                      | noise_factors           |                                                                                           | `(1, 3, 5)`                 |
-|                          | extrapolator            | `'exponential'`/<br>`'linear'`/<br>`'double_exponential'`/<br>`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
+|                          | extrapolator            | `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
   </TabItem>
   <TabItem value="SamplerV1" label="Sampler (V1)">
 | Sub-options              | Sub-sub-options         | Choices                                                                                   | Default                   |
@@ -121,7 +121,7 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
 |                          | shots_per_randomization |                                                                                           | 'auto'                    |
 | zne_mitigation           |                         | `True`/`False`                                                                                | `False`                     |
 | zne                      | noise_factors           |                                                                                           | `(1, 3, 5)`                 |
-|                          | extrapolator            | `'exponential'`/<br>`'linear'`/<br>`'double_exponential'`/<br>`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
+|                          | extrapolator            | `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
   </TabItem>
 
 </Tabs>
