--- a/tutorials/repeat-until-success/repeat-until-success.ipynb
+++ b/tutorials/repeat-until-success/repeat-until-success.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## Background\n",
     "\n",
-    "*QPU time estimate: 4 seconds  on ibm_canberra. (NOTE: This is an estimate only. Your runtime may vary.)*\n",
+    "*Usage estimate: 4 seconds  on ibm_canberra. (NOTE: This is an estimate only. Your runtime may vary.)*\n",
     "\n",
     "This tutorial demonstrates how certain IBM Quantum&trade; systems (those that support dynamic circuits) use mid-circuit measurements to produce a circuit that repeatedly attempts its setup until a syndrome measurement reveals that it has been successful.\n",
     "\n",
