--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -26,18 +26,26 @@ service = QiskitRuntimeService(channel="ibm_cloud", channel_strategy="q-ctrl")
 
 When calling the primitives, you can pass in options by using an options class or a dictionary. In the options classes, commonly used options, such as `resilience_level`, are at the first level. Other options are grouped into different categories, such as `execution`.
 
+
+
+
 <span id="options-defaults"></span>
 ### Defaults
 
-client default (Unset) and where to find server defaults
+The tables in the [Options classes summary section](#options-classes) lists the default values.
+
+For V2 primitives, if you do not specify a value for an option, it is given a special value of `Unset` and the server default value is used. Thus, the default value will be the same, regardless of your code version.
+For V1 primitives, if you do not specify a value for an option, the Qiskit Runtime client's default value is used.
 
 <span id="options-precedence"></span>
 ### Precedence rules
 
 option precedence rules
 
+**Some settings override other settings.  For example; if you set default_shots, it overrides any value set for default_precision.  Do we want to get into that much detail? **
+
 <span id="options-classes"></span>
-## Options classes
+## Options classes summary
 
 <Tabs>
   <TabItem value="EstimatorV2" label="Estimator V2">
@@ -76,27 +84,51 @@ option precedence rules
 
 </Tabs>
 
-Specify options as follows:  `primitive.options.option.sub-option.sub-sub-option = choice`
-
-Example: `estimator.options.dynamical_decoupling.enable = True`
+<Admonition type="caution" title="Important">
+Scroll to see the full table.
+</Admonition>
 
 <Tabs>
   <TabItem value="EstimatorV2" label="Estimator V2">
 | Options              | Sub-options              | Sub-sub-options         | Choices                                                                                   | Default                   |
 |----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|
 | default_shots        |                          |                         |                                                                                           | `4096`                      |
-| optimization_level   |                          |                         | `0`/`1`                                                                                       | `1`                         |
-| resilience_level     |                          |                         | `0`/`1`/`2`                                                                                     | `1`                         |
-| dynamical_decoupling | enable                   |                         |`True`/`False`                                                                                           |`False`                           |
+| default_precision    |                          |                         |                                                                                           | `0.015625 (1 / sqrt(4096))`     |
+| dynamical_decoupling |                          |                         |                                                                                           |   `FieldInfo(annotation=Union[DynamicalDecouplingOptions, Dict], required=False, default_factory=DynamicalDecouplingOptions)`                         |
+|                      | enable                   |                         | `True`/`False`                                                             |    `False`           |
 |                      | sequence_type            |                         | `'XX'`/`'XpXm'`/`'XY4'`                                                                         | `'XX'`                      |
 |                      | extra_slack_distribution |                         | `'middle'`/`'edges'`                                                                          | `'middle'`                  |
 |                      | scheduling_method        |                         | `'asap'`/`'alap'`                                                                            | `'alap'`                    |
-| resilience           | measure_mitigation       |                         | `True`/`False`                                                                                | `True`                      |
+| environment          |                          |                         |                                                                                                         |                                  |
+|                      | log_level                |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                                                              |`WARNING`                          |
+|                      | callback                 |                         |Callable function that recieves Job ID and Job result.                                                   |`None`                           |
+|                      | job_tags                 |                         |List of tags                                                                                             |`None`                           |
+| execution            |                          |                         |                                                                                                         |                           |
+|                      | init_qubits              |                         | `True`/`False`                                                                         | `True`                    |
+|                      | rep_delay                |                         | Value in the range supplied by `backend.rep_delay_range`.                                | Given by `backend.default_rep_delay`.|
+| max_execution_time   |                          |                         |                                                                                         | `Unset`                         |
+| optimization_level   |                          |                         | `0`/`1`                                                                                       | `1`                         |
+| resilience           | LayerNoiseLearning       |                         | `True`/`False`                                                                                | `True`                      |
+|                      |                          | max_layers_to_learn     |  `None`/ integer                                                                            | `4`                    |
+|                      |                          | shots_per_randomization |  integer                                                                         |  `128`                    |
+|                      |                          | num_randomizations      |   integer                                                                                |  `32`                    |
+|                      |                          | layer_pair_depths       |                                                                                           | `(0, 1, 2, 4, 16, 32)`              |
+|                      | measure_mitigation       |                         | `True`/`False`                                                                                | `True`                      |
 |                      | measure_noise_learning   | num_randomizations      |                                                                                           | `32`                      |
 |                      |                          | shots_per_randomization |                                                                                           | 'auto'                    |
+|                      | pec                      | max_overhead            |  `None`/ integer                                                                          | `100`                      |
+|                      |                          | noise_gain              |  `auto`/ float in the range `[0, 1)`                                                     | `auto`                    |
+|                      | pec_mitigation           |                         | `True`/`False`                                                                           | `False`                      |
 |                      | zne_mitigation           |                         | `True`/`False`                                                                                | `False`                     |
 |                      | zne                      | noise_factors           |                                                                                           | `(1, 3, 5)`                 |
 |                      |                          | extrapolator            | `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |
+| resilience_level     |                          |                         | `0`/`1`/`2`                                                                                     | `1`                         |
+| seed_estimator       |                          |                         |                                                                                           |     `Unset`               |
+| SimulatorOptions     |                          |                         |                                                                                   |                     |
+|                      | noise_model              |                         |                                                                                           | `Unset`                      |
+|                      | seed_simulator           |                         |                                                                                           | `Unset`                    |
+|                      | coupling_map             |                         |                                                                                           | `Unset`                    |
+|                      | basis_gates              |                         |                                                                                          | `Unset`            |
 | twirling             | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
 |                      | num_randomizations       |                         |                                                                                           | `'auto'`                    |
@@ -124,7 +156,6 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
   <TabItem value="EstimatorV1" label="Estimator (V1)">
 | Options              | Sub-options              | Sub-sub-options         | Choices                                                                                   | Default                   |
 |----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|
-| default_shots        |                          |                         |                                                                                           | `4096`                      |
 | optimization_level   |                          |                         | `0`/`1`                                                                                       | `1`                         |
 | resilience_level     |                          |                         | `0`/`1`/`2`                                                                                     | `1`                         |
 | dynamical_decoupling | enable                   |                         |`True`/`False`                                                                                           |`False`                           |
@@ -148,7 +179,6 @@ Example: `estimator.options.dynamical_decoupling.enable = True`
   <TabItem value="SamplerV1" label="Sampler (V1)">
 | Options              | Sub-options              | Sub-sub-options         | Choices                                                                                   | Default                   |
 |----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|
-| default_shots        |                          |                         |                                                                                           | `4096`                      |
 | optimization_level   |                          |                         | `0`/`1`                                                                                       | `1`                         |
 | dynamical_decoupling | enable                   |                         |`True`/`False`                                                                                           |`False`                           |
 |                      | sequence_type            |                         | `'XX'`/`'XpXm'`/`'XY4'`                                                                         | `'XX'`                      |
@@ -199,7 +229,9 @@ options.execution.shots = 2048
 
 ### Options class
 
-When creating an instance of the `Estimator` or `Sampler` class, you can pass in the `options` you created in the options class. Those options will then be applied when you use `run()` to perform the calculation.  Example:
+When creating an instance of the `Estimator` or `Sampler` class, you can pass in the `options` you created in the options class. Those options will then be applied when you use `run()` to perform the calculation.  Specify the options in this format:  `primitive.options.option.sub-option.sub-sub-option = choice`.  For example: `estimator.options.dynamical_decoupling.enable = True`
+
+Example:
 
 <Tabs>
   <TabItem value="PrimV2" label="V2 primitives">
