--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -13,10 +13,8 @@ Keep up with the latest and greatest from Qiskit and IBM Quantum! Gathered here 
 
 ### Qiskit SDK v1.1.0
 
-<Admonition type="tip" title="">
-To see the release notes for all versions, visit the [Qiskit SDK release notes](/api/qiskit/release-notes).
-</Admonition>
-
+*To see the release notes for all versions, visit the [Qiskit SDK release notes].
+*
 Qiskit SDK v1.1.0 has arrived, marking the first minor version release of the Qiskit SDK’s first major version. On the IBM Quantum&trade; blog, we review some of the key highlights — including top new features and improvements, as well as some important deprecations. Read the blog [here](https://www.ibm.com/quantum/blog/qiskit-1-1-release-summary).
 
 The updates and improvements include the following:
@@ -34,9 +32,7 @@ For more details on any of the topics covered in the blog, be sure to check [the
 
 ### Qiskit Runtime IBM Client 0.24.0
 
-<Admonition type="tip" title="">
-To see the release notes for all versions, visit the [Qiskit Runtime IBM Client release notes](/api/qiskit-ibm-runtime/release-notes).
-</Admonition>
+*To see the release notes for all versions, visit the [Qiskit Runtime IBM Client release notes](/api/qiskit-ibm-runtime/release-notes).*
 
 **Highlights from the 0.24.0 (2024-06-10) version release**
 
@@ -51,11 +47,11 @@ To see the release notes for all versions, visit the [Qiskit Runtime IBM Client 
 - The [`ZneOptions.amplifier`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions#amplifier) option was added, which can be one of: `gate_folding` (default), `gate_folding_front`, and `gate_folding_back`. See the [API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions#zneoptions) for more details.
 - You can now use the experimental option in [`qiskit_ibm_runtime.options.EstimatorOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) to enable the Probabilistic Error Amplification (PEA) error mitigation method.
 
-#### Upgrade Notes
+#### Upgrade notes
 
 - Qiskit SDK v1.1 is now supported and required.
 
-#### Bug Fixes
+#### Bug fixes
 
 - Fixed an issue where retrieved jobs would only return `RuntimeJob` instances, even if the job was run with a V2 primitive. Now, V2 primitive jobs will be returned correctly as `RuntimeJobV2` instances.
 - Fixed the combination of `insert_multiple_cycles` and `coupling_map` options in [`PadDynamicalDecoupling`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.transpiler.passes.scheduling.PadDynamicalDecoupling). This combination allows to select staggered dynamical decoupling with multiple sequence cycles in each delay that crosses the threshold set by `sequence_min_length_ratios`.
@@ -77,7 +73,7 @@ On the IBM Quantum blog, we take a deep dive into the new beta release with a sp
 
 ## Qiskit IBM Runtime service updates
 
-This summary of the latest changes to the Qiskit Runtime service applies to anyone using Qiskit Runtime, regardless how you communicate with the service (using qiskit-ibm-runtime or otherwise), or the version of the client SDK. 
+This summary of the latest changes to the Qiskit Runtime service applies to anyone using Qiskit Runtime, regardless how you communicate with the service (using qiskit-ibm-runtime or otherwise), or which version of the client SDK you use. 
 
 ### 28 March 2024
 
@@ -92,13 +88,11 @@ Probabilistic error amplification (PEA) error mitigation method is now available
 The `optimization_level` option is deprecated for Estimator V2 and will be removed no sooner than three months from now.
 
 
-## Quantum blog: How execution modes enable efficient, utility-scale workloads 
+## Qiskit blog: How execution modes enable efficient, utility-scale workloads 
 
 {/* Bring over the Quantum news (blog) announcement post */}
 
-<Admonition type="tip" title="">
-Browse all blogs at the [Quantum Research blog page](https://www.ibm.com/quantum/blog).
-</Admonition>
+*Browse all blogs at the [Quantum Research blog page](https://www.ibm.com/quantum/blog).*
 
 In a recent post on the IBM Quantum&trade; blog, we introduce three new and improved execution modes that make running utility-scale workloads more reliable, more predictable, and more efficient than ever before.
 
